# muntin

./: .gitignore  AGENTS.md  CLAUDE.md  CRAFT.md  LICENSE  README.md  pyproject.toml
docs/: decisions.md
docs/superpowers/plans/: 2026-07-21-llmbyt-v1.md  2026-07-21-muntin-v1.md  2026-07-22-agent-adoption.md
docs/superpowers/specs/: 2026-07-21-llmbyt-design.md  2026-07-21-muntin-design.md  2026-07-22-agent-adoption-design.md
examples/: bounce.py  celebrate.py  clock.py  message.py  sparkline.py
skills/muntin/: CRAFT.md  SKILL.md  celebrate.py
src/llmbyt/: __init__.py  canvas.py  cli.py  device.py  encode.py  errors.py  font.py  preview.py  runner.py  scene.py
src/muntin/: __init__.py  canvas.py  cli.py  device.py  encode.py  errors.py  font.py  preview.py  runner.py  scene.py
src/muntin/fonts/: LICENSES.md
tests/: golden.py  test_canvas.py  test_celebrate.py  test_cli.py  test_device.py  test_encode.py  test_examples.py  test_font.py  test_golden.py  test_preview.py  test_runner.py  test_scene_layout.py  test_scene_nodes.py  test_scene_render.py  test_skill.py
