[project]
name = "llmbyt"
version = "0.1.0"
description = "Give a coding agent a 64x32 LED display"
requires-python = ">=3.11"
dependencies = ["pillow>=10"]

[project.scripts]
llmbyt = "llmbyt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmbyt"]

[dependency-groups]
dev = ["pytest>=8"]
