[project]
name = "muntin"
version = "0.1.0"
description = "Give a coding agent a 64x32 LED display"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Thomas Bohmbach, Jr." }]
keywords = ["tidbyt", "led", "pixel-art", "agent", "cli", "display"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = ["pillow>=10"]

[project.urls]
Homepage = "https://github.com/gumptionthomas/muntin"
Repository = "https://github.com/gumptionthomas/muntin"
Issues = "https://github.com/gumptionthomas/muntin/issues"

[project.scripts]
muntin = "muntin.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/muntin"]

[dependency-groups]
dev = ["pytest>=8"]
